@@ -21,7 +21,7 @@ dna_deGFP = txtl_adddna(tube3, ...
 
 % Mix the contents of the individual tubes
 Mobj = txtl_combine([tube1, tube2, tube3], [6, 2, 2]);
-
+txtl_setup_parameters(Mobj);
 %
 % Run a simulaton
 %
