@@ -42,6 +42,10 @@ dna_gamS = txtl_adddna(tube3, 'p70(50)', 'rbs(20)', 'gamS(1000)', 1, 'plasmid');
 % Mix the contents of the individual tubes
 Mobj = txtl_combine([tube1, tube2, tube3], [6, 2, 2]);
 
+
+txtl_setup_parameters(Mobj);
+
+
 %
 % Run a simulaton
 %
